app/deb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wills-app
spec:
  replicas: 8
  selector:
    matchLabels:
      app: wills-app
  template:
    metadata:
      labels:
        app: wills-app
    spec:
      containers:
      - name: wills-app
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wills-app
  labels:
    app: wills-app
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: wills-app
