app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wills-app-ingress
  labels:
    app: wills-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /wills-app
        pathType: Prefix
        backend:
          service:
            name: wills-app
            port:
              number: 80
